--- a/hack/ci/testdata/seed.yaml
+++ b/hack/ci/testdata/seed.yaml
@@ -97,7 +97,7 @@ spec:
         vsphere:
           cluster: vcenter.dc.k8c.io
           datacenter: Hamburg
-          datastore: ceph-vm
+          datastore: vsan
           endpoint: https://10.10.0.100
           allowInsecure: true
           ipv6Enabled: true
