applications installtion: reset Status.failures to 0 if the applicationInstallation's spec has changed
if the application installation has reached the max number of retries due to a wrong configuration (e.g. invalid values), and the application spec changes (e.g fixing values) then we havez to reset the Status.failures to 0 otherwise there is no way to fix the application installation

Signed-off-by: Vincent Gramer <vincent@kubermatic.com>

--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
@@ -372,6 +372,10 @@ spec:
                       message:
                         description: Human readable message indicating details about last transition.
                         type: string
+                      observedGeneration:
+                        description: observedGeneration represents the .metadata.generation that the condition was set based upon. For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date with respect to the current state of the instance.
+                        format: int64
+                        type: integer
                       reason:
                         description: (brief) reason for the condition's last transition.
                         type: string
