--- a/hack/ci/testdata/seed_backup.yaml
+++ b/hack/ci/testdata/seed_backup.yaml
@@ -77,7 +77,7 @@ spec:
         vsphere:
           cluster: Kubermatic
           datacenter: Hamburg
-          datastore: ceph-vm
+          datastore: vsan
           endpoint: https://10.10.0.100
           allow_insecure: true
           rootPath: /Hamburg/vm/Kubermatic-ci
