KubeVirt image cloning
Signed-off-by: Helene Durand <helene@kubermatic.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -554,6 +554,7 @@ spec:
                                         description: OperatingSystems represents list of supported operating-systems with their URLs.
                                         type: object
                                     required:
+                                      - imageCloning
                                       - operatingSystems
                                     type: object
                                 required:
