--- a/docs/zz_generated.seed.ce.yaml
+++ b/docs/zz_generated.seed.ce.yaml
@@ -114,9 +114,15 @@ spec:
           network: ""
         # Kubevirt configures a KubeVirt datacenter.
         kubevirt:
-          # AdditionalNetPols (optional) allows to add some extra custom NetworkPolicies, that are deployed
-          # in the dedicated infra KubeVirt cluster. They are added to the default `cluster-isolation` one.
-          additionalNetPols: null
+          # CustomNetworkPolicies (optional) allows to add some extra custom NetworkPolicies, that are deployed
+          # in the dedicated infra KubeVirt cluster. They are added to the defaults.
+          customNetworkPolicies:
+            - metadata:
+                name: deny-ingress
+              spec:
+                podSelector: {}
+                policyTypes:
+                  - Ingress
           # DNSConfig represents the DNS parameters of a pod. Parameters specified here will be merged to the generated DNS
           # configuration based on DNSPolicy.
           dnsConfig:
