--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -207,8 +207,8 @@ spec:
                           kubevirt:
                             description: Kubevirt configures a KubeVirt datacenter.
                             properties:
-                              additionalNetPols:
-                                description: AdditionalNetPols (optional) allows to add some extra custom NetworkPolicies, that are deployed in the dedicated infra KubeVirt cluster. They are added to the default `cluster-isolation` one.
+                              customNetworkPolicies:
+                                description: CustomNetworkPolicies (optional) allows to add some extra custom NetworkPolicies, that are deployed in the dedicated infra KubeVirt cluster. They are added to the defaults.
                                 items:
                                   description: NetworkPolicy describes what network traffic is allowed for a set of Pods
                                   properties:
