KubeVirt reconcile CustomNetworkPolicies and fix ci
Signed-off-by: Helene Durand <helene@kubermatic.com>

--- a/hack/ci/testdata/seed.yaml
+++ b/hack/ci/testdata/seed.yaml
@@ -148,6 +148,16 @@ spec:
           dnsConfig:
             nameservers:
               - 8.8.8.8
+          customNetworkPolicies:
+            - name: allow-incoming
+              spec:
+                ingress:
+                - from:
+                  - ipBlock:
+                      cidr: 0.0.0.0/0
+                podSelector: {}
+                policyTypes:
+                - Ingress
     syseleven-dbl1:
       country: DE
       location: Syseleven - dbl1
