--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -1515,8 +1515,8 @@ spec:
                         type: array
                     type: object
                   konnectivityProxy:
-                    description: KonnectivityProxy configures resources limits/requests
-                      for konnectivity-server sidecar.
+                    description: KonnectivityProxy configures konnectivity-server
+                      and konnectivity-agent components.
                     properties:
                       keepaliveTime:
                         description: KeepaliveTime represents a duration of time to
@@ -1524,8 +1524,8 @@ spec:
                           to agents and server. Defaults to 1m.
                         type: string
                       resources:
-                        description: ResourceRequirements describes the compute resource
-                          requirements.
+                        description: Resources configure limits/requests for Konnectivity
+                          components.
                         properties:
                           limits:
                             additionalProperties:
