--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -1359,6 +1359,23 @@ spec:
                           type: object
                       type: object
                   type: object
+                oidcProviderConfiguration:
+                  description: OIDCProviderConfiguration allows to configure OIDC provider at the Seed level.
+                  properties:
+                    issuerClientID:
+                      description: IssuerClientID is the application's ID.
+                      type: string
+                    issuerClientSecret:
+                      description: IssuerClientSecret is the application's secret.
+                      type: string
+                    issuerURL:
+                      description: URL of the provider which allows the API server to discover public signing keys.
+                      type: string
+                  required:
+                    - issuerClientID
+                    - issuerClientSecret
+                    - issuerURL
+                  type: object
                 proxySettings:
                   description: 'Optional: ProxySettings can be used to configure HTTP proxy settings on the worker nodes in user clusters. However, proxy settings on nodes take precedence.'
                   properties:
