refactor KubeVirt seed images configuration
Signed-off-by: Marcin Franczyk <marcin0franczyk@gmail.com>

--- a/docs/zz_generated.seed.ce.yaml
+++ b/docs/zz_generated.seed.ce.yaml
@@ -146,7 +146,7 @@ spec:
           dnsPolicy: ""
           # Images represents standard VM Image sources.
           images:
-            # HTTP source for standard images.
+            # HTTP represents a http source.
             http:
               # OperatingSystems represents list of supported operating-systems with their URLs.
               operatingSystems:
