add support for Kubernetes 1.26

--- a/addons/csi/openstack/controllerplugin.yaml
+++ b/addons/csi/openstack/controllerplugin.yaml
@@ -28,6 +28,9 @@
 {{ if eq .Cluster.MajorMinorVersion "1.25" }}
 {{ $version = "v1.25.3"}}
 {{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.26" }}
+{{ $version = "v1.26.0"}}
+{{ end }}
 {{ if not (eq $version "UNSUPPORTED") }}
 ---
 kind: Deployment
