--- a/addons/azure-cloud-node-manager/cloud-node-manager.yaml
+++ b/addons/azure-cloud-node-manager/cloud-node-manager.yaml
@@ -29,6 +29,9 @@
 {{ if eq .Cluster.MajorMinorVersion "1.25" }}
 {{ $version = "v1.25.2"}}
 {{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.26" }}
+{{ $version = "v1.26.1"}}
+{{ end }}
 {{ if not (eq $version "UNSUPPORTED") }}
 apiVersion: v1
 kind: ServiceAccount
@@ -63,6 +66,7 @@ metadata:
   labels:
     k8s-app: cloud-node-manager
     kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -101,6 +105,12 @@ spec:
         seccompProfile:
           type: RuntimeDefault
       tolerations:
+      - key: CriticalAddonsOnly
+        operator: Exists
+      - key: node-role.kubernetes.io/master
+        operator: Equal
+        value: "true"
+        effect: NoSchedule
       - operator: "Exists"
         effect: NoExecute
       - operator: "Exists"
