--- a/addons/csi/gcp/driver.yaml
+++ b/addons/csi/gcp/driver.yaml
@@ -504,7 +504,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: {{ Image "k8s.gcr.io/sig-storage/csi-provisioner:v3.1.0" }}
+        image: {{ Image "registry.k8s.io/sig-storage/csi-provisioner:v3.1.0" }}
         livenessProbe:
           failureThreshold: 1
           httpGet:
@@ -533,7 +533,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: {{ Image "k8s.gcr.io/sig-storage/csi-attacher:v3.4.0" }}
+        image: {{ Image "registry.k8s.io/sig-storage/csi-attacher:v3.4.0" }}
         livenessProbe:
           failureThreshold: 1
           httpGet:
@@ -562,7 +562,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: {{ Image "k8s.gcr.io/sig-storage/csi-resizer:v1.4.0" }}
+        image: {{ Image "registry.k8s.io/sig-storage/csi-resizer:v1.4.0" }}
         livenessProbe:
           failureThreshold: 1
           httpGet:
@@ -591,7 +591,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: {{ Image "k8s.gcr.io/sig-storage/csi-snapshotter:v4.0.1" }}
+        image: {{ Image "registry.k8s.io/sig-storage/csi-snapshotter:v4.0.1" }}
         name: csi-snapshotter
         volumeMounts:
         - mountPath: /csi
@@ -602,7 +602,7 @@ spec:
         env:
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /etc/cloud-sa/cloud-sa.json
-        image: {{ Image "k8s.gcr.io/cloud-provider-gcp/gcp-compute-persistent-disk-csi-driver:v1.7.1" }}
+        image: {{ Image "registry.k8s.io/cloud-provider-gcp/gcp-compute-persistent-disk-csi-driver:v1.7.1" }}
         name: gce-pd-driver
         volumeMounts:
         - mountPath: /csi
@@ -649,7 +649,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
-        image: {{ Image "k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.5.0" }}
+        image: {{ Image "registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.5.0" }}
         name: csi-driver-registrar
         volumeMounts:
         - mountPath: /csi
@@ -660,7 +660,7 @@ spec:
         - --v=5
         - --endpoint=unix:/csi/csi.sock
         - --run-controller-service=false
-        image: {{ Image "k8s.gcr.io/cloud-provider-gcp/gcp-compute-persistent-disk-csi-driver:v1.7.1" }}
+        image: {{ Image "registry.k8s.io/cloud-provider-gcp/gcp-compute-persistent-disk-csi-driver:v1.7.1" }}
         name: gce-pd-driver
         securityContext:
           privileged: true
